--- a/src/view/app.fxml
+++ b/src/view/app.fxml
@@ -16,16 +16,21 @@
     <right>
         <VBox prefHeight="200.0" prefWidth="100.0" spacing="10.0" BorderPane.alignment="CENTER">
             <children>
-                <Button fx:id="playButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" text="Play">
+                <Button fx:id="playButton" mnemonicParsing="false" onAction="#playButtonOnAction" prefHeight="25.0" prefWidth="105.0" text="Play">
                     <font>
                         <Font name="Agency FB" size="16.0" />
                     </font>
                 </Button>
-                <Button fx:id="stopButton" mnemonicParsing="false" prefHeight="25.0" prefWidth="105.0" text="Stop">
+                <Button fx:id="stopButton" mnemonicParsing="false" onAction="#stopButtonOnAction" prefHeight="25.0" prefWidth="105.0" text="Stop">
                     <font>
                         <Font name="Agency FB" size="16.0" />
                     </font>
                 </Button>
+            <Button fx:id="exitButton" mnemonicParsing="false" onAction="#exitButtonOnAction" prefHeight="25.0" prefWidth="104.0" text="Exit">
+               <font>
+                  <Font name="Agency FB" size="16.0" />
+               </font>
+            </Button>
             </children>
         </VBox>
     </right>
@@ -64,7 +69,7 @@
                 <RowConstraints maxHeight="19.0" minHeight="19.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <CheckBox fx:id="checkbox0_0" mnemonicParsing="false" />
+                <CheckBox fx:id="checkbox0_0" mnemonicParsing="false" onAction="#checkbox0_0OnAction" />
                 <CheckBox fx:id="checkbox0_1" mnemonicParsing="false" GridPane.columnIndex="1" />
                 <CheckBox fx:id="checkbox0_2" mnemonicParsing="false" GridPane.columnIndex="2" />
                 <CheckBox fx:id="checkbox0_3" mnemonicParsing="false" GridPane.columnIndex="3" />
@@ -325,16 +330,16 @@
             </children>
         </VBox>
     </left>
-   <bottom>
-      <AnchorPane prefHeight="50.0" prefWidth="660.0" BorderPane.alignment="CENTER">
-         <children>
-            <ScrollBar fx:id="tempoScrollBar" blockIncrement="1.0" layoutX="180.0" layoutY="6.0" max="300.0" min="30.0" prefHeight="17.0" prefWidth="300.0" value="30.0" visibleAmount="1.0" />
-            <Label fx:id="tempoLabel" layoutX="121.0" layoutY="6.0" text="Tempo">
-               <font>
-                  <Font name="Agency FB" size="14.0" />
-               </font>
-            </Label>
-         </children>
-      </AnchorPane>
-   </bottom>
+    <bottom>
+        <AnchorPane prefHeight="50.0" prefWidth="660.0" BorderPane.alignment="CENTER">
+            <children>
+                <ScrollBar fx:id="tempoScrollBar" blockIncrement="1.0" layoutX="180.0" layoutY="6.0" max="300.0" min="30.0" prefHeight="17.0" prefWidth="300.0" value="120.0" visibleAmount="1.0" />
+                <Label fx:id="tempoLabel" layoutX="121.0" layoutY="6.0" text="Tempo">
+                    <font>
+                        <Font name="Agency FB" size="14.0" />
+                    </font>
+                </Label>
+            </children>
+        </AnchorPane>
+    </bottom>
 </BorderPane>
