Fixed some bugs with playing

--- a/src/view/app.fxml
+++ b/src/view/app.fxml
@@ -103,7 +103,7 @@
     <bottom>
         <AnchorPane prefHeight="50.0" prefWidth="660.0" BorderPane.alignment="CENTER">
             <children>
-                <ScrollBar fx:id="tempoScrollBar" blockIncrement="1.0" layoutX="76.0" layoutY="6.0" max="300.0" min="30.0" prefHeight="17.0" prefWidth="550.0" value="120.0" visibleAmount="1.0" />
+                <ScrollBar fx:id="tempoScrollBar" blockIncrement="1.0" layoutX="76.0" layoutY="6.0" max="300.0" min="30.0" onMouseReleased="#tempoScrollEndOfEditingTempo" prefHeight="17.0" prefWidth="550.0" value="120.0" visibleAmount="1.0" />
                 <Label fx:id="tempoLabel" layoutX="14.0" layoutY="6.0" text="Tempo">
                     <font>
                         <Font name="Agency FB" size="14.0" />
